--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -719,6 +719,11 @@ workflows:
           target: "./itests/mempool_test.go"
       
       - test:
+          name: test-itest-migration
+          suite: itest-migration
+          target: "./itests/migration_test.go"
+      
+      - test:
           name: test-itest-mpool_msg_uuid
           suite: itest-mpool_msg_uuid
           target: "./itests/mpool_msg_uuid_test.go"
