--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -795,6 +795,11 @@ workflows:
           suite: itest-mempool
           target: "./itests/mempool_test.go"
       - test:
+          name: test-itest-migration
+          suite: itest-migration
+          target: "./itests/migration_test.go"
+      
+      - test:
           name: test-itest-mpool_msg_uuid
           requires:
             - build
