feat: itests should run on latest network version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -992,6 +992,8 @@ workflows:
             - build
           suite: itest-wdpost
           target: "./itests/wdpost_test.go"
+          get-params: true
+          
       - test:
           name: test-itest-wdpost_worker_config
           requires:
