--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -547,6 +547,9 @@ workflows:
           [[- if or (eq $name "worker") (eq $name "deals_concurrent") (eq $name "wdpost_worker_config")]]
           executor: golang-2xl
           [[- end]]
+          [[- if (eq $name "wdpost")]]
+          get-params: true
+          [[end]]
       [[- end ]][[- end]]
 
       [[- range $suite, $pkgs := .UnitSuites]]
