Add comment stating msgIndex is an experimental feature

--- a/documentation/en/default-lotus-config.toml
+++ b/documentation/en/default-lotus-config.toml
@@ -391,6 +391,7 @@
 
 
 [Index]
+  # EXPERIMENTAL FEATURE. USE WITH CAUTION
   # EnableMsgIndex enables indexing of messages on chain.
   #
   # type: bool
