--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -558,6 +558,12 @@ workflows:
           suite: itest-cli
           target: "./itests/cli_test.go"
       - test:
+          name: test-itest-clusterdb
+          requires:
+            - build
+          suite: itest-clusterdb
+          target: "./itests/clusterdb_test.go"
+      - test:
           name: test-itest-deadlines
           requires:
             - build
