--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,7 @@ jobs:
         description: Test suite name to report to CircleCI.
     executor: << parameters.executor >>
     docker:
-      - image: cimg/base
+      - image: ubuntu:20.04
       - image: circleci/postgres:12
         environment:
           PGHOST: localhost
