--- a/documentation/en/default-lotus-miner-config.toml
+++ b/documentation/en/default-lotus-miner-config.toml
@@ -671,13 +671,13 @@
   # env var: LOTUS_SEALING_TERMINATEBATCHWAIT
   #TerminateBatchWait = "5m0s"
 
-  # SealWithSyntheticPoRep will reduce data holdings after PC1 by storing the precomputed responses
-  # to any challenge. This proof's PC1 step uses a cheaper-to-compute algorithm for the responses,
-  # but still must do more computation during PC1 in order to create this oracle.
+  # UseSyntheticPoRep will reduce the amout of data held on disk in the WaitSeed phase to 32GiB
+  # at the cost of having to precompute the synthetic challenges.
+  # TODO: put estimated costs here
   #
   # type: bool
-  # env var: LOTUS_SEALING_SEALWITHSYNTHETICPOREP
-  #SealWithSyntheticPoRep = false
+  # env var: LOTUS_SEALING_USESYNTHETICPOREP
+  #UseSyntheticPoRep = false
 
 
 [Storage]
