--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ executors:
   ubuntu:
     docker:
       - image: ubuntu:20.04
+  yugabyte:
+    docker:
+      - image: yugabytedb/yugabyte:latest
 
 commands:
   build-platform-specific:
