--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -160,7 +160,7 @@ jobs:
     docker:
       - image: cimg/go:[[ .GoVersion]]
       - image: yugabytedb/yugabyte:latest
-        command: bin/yugabyted start
+        command: bin/yugabyted start && bash
     resource_class: << parameters.resource_class >>
     steps:
       - install-ubuntu-deps
