--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -784,6 +784,12 @@ workflows:
           suite: itest-harmonydb
           target: "./itests/harmonydb_test.go"
       - test:
+          name: test-itest-harmonytask
+          requires:
+            - build
+          suite: itest-harmonytask
+          target: "./itests/harmonytask_test.go"
+      - test:
           name: test-itest-lite_migration
           requires:
             - build
