--- a/scripts/lotus-provider.service
+++ b/scripts/lotus-provider.service
@@ -2,12 +2,11 @@
 Description=Lotus Provider
 After=network.target
 After=lotus-daemon.service
-Wants=lotus-daemon.service
 
 [Service]
 ExecStart=/usr/local/bin/lotus-provider run
 Environment=GOLOG_FILE="/var/log/lotus/provider.log"
 Environment=GOLOG_LOG_FMT="json"
-
+LimitNOFILE=1000000
 [Install]
 WantedBy=multi-user.target
