--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -995,6 +995,7 @@ workflows:
           suite: utest-unit-cli
           target: "./cli/... ./cmd/... ./api/..."
           get-params: true
+          executor: golang-2xl
       - test:
           name: test-unit-node
           requires:
@@ -1002,12 +1003,14 @@ workflows:
           suite: utest-unit-node
           target: "./node/..."
           
+          
       - test:
           name: test-unit-rest
           requires:
             - build
           suite: utest-unit-rest
           target: "./blockstore/... ./build/... ./chain/... ./conformance/... ./gateway/... ./journal/... ./lib/... ./markets/... ./paychmgr/... ./tools/..."
+          
           executor: golang-2xl
       - test:
           name: test-unit-storage
@@ -1015,6 +1018,7 @@ workflows:
             - build
           suite: utest-unit-storage
           target: "./storage/... ./extern/..."
+          
           
       - test:
           go-test-flags: "-run=TestMulticoreSDR"
