sealing: state-types with method defs

--- a/chain/actors/builtin/miner/actor.go.template
+++ b/chain/actors/builtin/miner/actor.go.template
@@ -233,6 +233,7 @@ type CompactPartitionsParams = minertypes.CompactPartitionsParams
 type WithdrawBalanceParams = minertypes.WithdrawBalanceParams
 
 type PieceActivationManifest = minertypes12.PieceActivationManifest
+type ProveCommitSectors2Params = minertypes12.ProveCommitSectors2Params
 
 var QAPowerMax = minertypes.QAPowerMax
 
