--- a/chain/actors/builtin/market/actor.go.template
+++ b/chain/actors/builtin/market/actor.go.template
@@ -103,10 +103,10 @@ type BalanceTable interface {
 
 type DealStates interface {
 	ForEach(cb func(id abi.DealID, ds DealState) error) error
-	Get(id abi.DealID) (*DealState, bool, error)
+	Get(id abi.DealID) (DealState, bool, error)
 
 	array() adt.Array
-	decode(*cbg.Deferred) (*DealState, error)
+	decode(*cbg.Deferred) (DealState, error)
 }
 
 type DealProposals interface {
@@ -142,7 +142,13 @@ func DecodePublishStorageDealsReturn(b []byte, nv network.Version) (PublishStora
 type DealProposal = markettypes.DealProposal
 type DealLabel = markettypes.DealLabel
 
-type DealState = markettypes.DealState
+type DealState interface {
+	SectorStartEpoch() abi.ChainEpoch // -1 if not yet included in proven sector
+	LastUpdatedEpoch() abi.ChainEpoch // -1 if deal state never updated
+	SlashEpoch() abi.ChainEpoch       // -1 if deal never slashed
+
+	Equals(other DealState) bool
+}
 
 type DealStateChanges struct {
 	Added	 []DealIDState
@@ -158,8 +164,8 @@ type DealIDState struct {
 // DealStateChange is a change in deal state from -> to
 type DealStateChange struct {
 	ID	 abi.DealID
-	From *DealState
-	To	 *DealState
+	From DealState
+	To	 DealState
 }
 
 type DealProposalChanges struct {
@@ -172,12 +178,36 @@ type ProposalIDState struct {
 	Proposal markettypes.DealProposal
 }
 
-func EmptyDealState() *DealState {
-	return &DealState{
-		SectorStartEpoch: -1,
-		SlashEpoch:		  -1,
-		LastUpdatedEpoch: -1,
+
+type emptyDealState struct{}
+
+func (e *emptyDealState) SectorStartEpoch() abi.ChainEpoch {
+	return -1
+}
+
+func (e *emptyDealState) LastUpdatedEpoch() abi.ChainEpoch {
+	return -1
+}
+
+func (e *emptyDealState) SlashEpoch() abi.ChainEpoch {
+	return -1
+}
+
+func (e *emptyDealState) Equals(other DealState) bool {
+	if e.SectorStartEpoch() != other.SectorStartEpoch() {
+		return false
 	}
+	if e.LastUpdatedEpoch() != other.LastUpdatedEpoch() {
+		return false
+	}
+	if e.SlashEpoch() != other.SlashEpoch() {
+		return false
+	}
+	return true
+}
+
+func EmptyDealState() DealState {
+	return &emptyDealState{}
 }
 
 // returns the earned fees and pending fees for a given deal
