--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -545,7 +545,7 @@ workflows:
           [[- if or (eq $name "worker") (eq $name "deals_concurrent") (eq $name "wdpost_worker_config")]]
           executor: golang-2xl
           [[- end]]
-          [[- if (eq $name "wdpost")]]
+          [[- if or (eq $name "wdpost") (eq $name "sector_pledge")]]
           get-params: true
           [[end]]
       [[- end ]][[- end]]
