--- a/documentation/en/default-lotus-provider-config.toml
+++ b/documentation/en/default-lotus-provider-config.toml
@@ -1,8 +1,9 @@
-# type: bool
-#EnableWindowPost = false
+[Subsystems]
+  # type: bool
+  #EnableWindowPost = false
 
-# type: bool
-#EnableWinningPost = false
+  # type: bool
+  #EnableWinningPost = false
 
 
 [Fees]
